# MAWIFlow

./: .gitignore  .pre-commit-config.yaml  README.md  _ks_test.sh  boxplot_stats.py  boxplot_stats.sh  combine-flows-with-annotations.sh  create_samples.sh  dvc.yaml  feature_importance.py  feature_importance.sh  generate-annotations.sh  generate-flows.sh  ks_test.py  ks_test.sh  params.yaml  pyproject.toml  requirements.txt  taxonomies.csv
data/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=01/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=02/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=03/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=04/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=05/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=06/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=07/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=08/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=09/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=10/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=11/: .gitignore
data/cicflowmeter/v1.1/year=2011/month=12/: .gitignore
data/cicflowmeter/v1.1/year=2016/month=01/: .gitignore
data/cicflowmeter/v1.1/year=2021/month=01/: .gitignore
data/cicflowmeter/v1.1/year=2021/month=02/: .gitignore
data/raw/: .gitignore
docs/: data-pipeline-flow-chart.mmd
notebooks/: alibi_detect_drift.ipynb  cicflowmeter-gintsengelen.ipynb  create-sample.ipynb  feature-importance.ipynb  inspect-cns2022-cicids2017-improved.ipynb  inspect-processed-data.ipynb  inspect-samples-malicious-benign-balanced-n10_000.ipynb  inspect-samples-malicious-benign-balanced-n1_000.ipynb  inspect-samples-taxonomy-balanced-n10_000.ipynb  inspect-samples-taxonomy-balanced-n1_000.ipynb  join-annotations.ipynb  mawiflow-metrics.ipynb  pca-drift.ipynb  taxonomies_embeddings.ipynb
src/mawiflow/annotations/: __main__.py  readers.py
src/mawiflow/flows/: __main__.py  dataloader.py  sampler.py
src/mawiflow/scraper/: __main__.py  pipelines.py  scrapy.cfg  settings.py
src/mawilab_data/: __init__.py
src/mawilab_data/annotations/: __main__.py  readers.py
src/mawilab_data/cicflowmeter/: __main__.py
src/mawilab_data/sampler/: __main__.py  local.py
src/mawilab_data/schema/: cicflowmeter.py
src/mawilab_data/scraper/: __init__.py  __main__.py  scrapy.cfg  settings.py
src/mawilab_data/scraper/spiders/: mawilab.py
tests/: test_demo.py
(+26342 files in other folders)
